# spock

./: .gitignore  CMakeLists.txt  CONV1D_BUG_DIAGNOSIS.md  IMPLEMENTATION_PLAN.md  NEXT_STEPS.md  README.md
apps/: spock-bench.cpp  spock-check.cpp  spock-decode.cpp  spock-deltanet-chunk-prefill-probe.cpp  spock-deltanet-chunk-prefill-tiled-probe.cpp  spock-deltanet-chunk.cpp  spock-deltanet-prefill-collect-probe.cpp  spock-deltanet-prefill-pipeline-probe.cpp  spock-repack-text.cpp  vk-capabilities.cpp  vk_barrier_probe.cpp  vk_deltanet_conv_l2_probe.cpp  vk_deltanet_g_beta_probe.cpp  vk_deltanet_mixer_probe.cpp  vk_deltanet_norm_gate_probe.cpp  vk_deltanet_recurrent_probe.cpp  vk_matvec_probe.cpp  vk_persistent_decode_skeleton.cpp  vk_persistent_layer0_probe.cpp  vk_persistent_mlp_probe.cpp  vk_residual_add_probe.cpp
bench/: baseline_rx6750xt.json
diary/: 0001_project_skeleton_and_contract.md  0002_actual_model_ingestion.md  0003_text_only_artifact_plan.md  0004_text_weight_repack.md  0005_reference_decode_p0_freeze.md  0006_weight_pipeline_verification.md  0007_vulkan_decode_pipeline.md  0008_mlp_decode_path.md  0009_attention_decode_path.md  0010_deltanet_decode_path.md  0011_attention_v_accumulation_bug.md  0012_qwen35_rmsnorm_parity_fix.md  0013_native_deltanet_chunk_rule.md  0014_radv_device_selection_and_prefill_gate.md  0015_decode_drift_diagnostics_and_handoff_checkpoint.md  0016_precision_drift_isolation_and_refined_next_work.md  0017_gpu_deltanet_chunk_prefill_probe.md  0018_current_verified_state_checkpoint.md  0019_gpu_collect_prefill_diagnostic.md  0020_gpu_chunk_prefill_from_gpu_collect.md  0021_narrow_runtime_cleanup.md  0022_ctest_gpu_collect_chunk_prefill_gate.md  0023_tiled_single_dispatch_chunk_prefill_probe.md  0024_runtime_tiled_chunk_prefill_gate.md  0025_gpu_resident_chunk_output_handoff.md  0026_gpu_side_chunk_init_clear.md  0027_device_resident_decode_token_embedding.md  0028_deferred_generated_token_download.md  0029_per_layer_stable_descriptor_sets.md  0030_rejected_inner_deltanet_descriptor_prebind.md  0031_prebound_rope_descriptors.md  0032_l2_deltanet_descriptor_slice.md  0033_rejected_deltanet_gbeta_descriptor_prebind.md  0034_deltanet_gbeta_descriptor_prebind_after_ordering_fix.md  0035_deltanet_recurrent_descriptor_prebind.md  0036_deltanet_norm_gate_descriptor_prebind.md  0037_deltanet_out_proj_descriptor_prebind.md  0038_merged_deltanet_decode_command_buffers.md  0039_single_submit_decode.md  0040_gpu_timestamp_decode_instrumentation.md  (+91 more)
docs/: actual_model_findings.md  artifact_format.md  megakernel_development_philosophy.md  megakernel_phase_rationale.md  parity_contract.md  runtime_strategy.md  rx6750xt_megakernel_execution_map.md
shaders/: argmax.comp  attention_decode.comp  attention_decode_f32out.comp  conv1d_step.comp  deltanet_chunk_last_to_fp16.comp  deltanet_chunk_prefill.comp  deltanet_chunk_prefill_tiled.comp  deltanet_compute_g_beta.comp  deltanet_conv_l2_qk.comp  deltanet_norm_gate.comp  deltanet_norm_gate_f32in_fp16out.comp  deltanet_prefill_collect.comp  deltanet_recurrent.comp  deltanet_recurrent_f32out.comp  deltanet_recurrent_gbeta.comp  deltanet_recurrent_gbeta_norm_gate.comp  embedding_lookup.comp  embedding_lookup_f32.comp  embedding_lookup_from_buffer.comp  kv_cache_store.comp  l2_norm_per_head.comp  lm_head_tiled.comp  matvec.comp  matvec_f32_out.comp  matvec_f32in.comp  matvec_tiled.comp  persistent_barrier_probe.comp  persistent_decode_skeleton.comp  persistent_layer0_probe.comp  persistent_mlp_probe.comp  residual_add.comp  residual_add_f32.comp  residual_add_f32out.comp  residual_add_mixed.comp  residual_add_mixed_f32out.comp  rms_norm.comp  rms_norm_f32.comp  rms_norm_f32_1plus.comp  rms_norm_f32in_fp16out.comp  rms_norm_per_head.comp  (+6 more)
src/kernels/: kernel_contracts.hpp
src/model/: qwen35_config.cpp  qwen35_config.hpp
src/reference/: qwen35_cpu_reference.cpp  qwen35_cpu_reference.hpp
src/runtime/: benchmark.cpp  benchmark.hpp  deltanet_chunk.cpp  deltanet_chunk.hpp  json_parse.cpp  json_parse.hpp  vk_allocator.cpp  vk_allocator.hpp  vk_context.cpp  vk_context.hpp  vk_decode.cpp  vk_decode.hpp  vk_device.cpp  vk_device.hpp  vk_session.cpp  vk_session.hpp  weight_loader.cpp  weight_loader.hpp
tests/: conftest.py  run_actual_model_smoke.py  run_artifact_smoke.py  run_deltanet_chunk_unit.py  run_diagnose_handoff.py  run_diary_check.py  run_extract_component_fp16_unit.py  run_json_fixture_check.py  run_p0_parity.py  run_sweep_gpu_timestamp_unit.py  run_text_plan_smoke.py  run_text_plan_unit.py  run_text_repack_unit.py  run_vk_decode_parity.py  test_cli_smoke.py  test_shader_sources.py
tests/data/: layer0_step1_dn_a_16.fp16  layer0_step1_dn_b_16.fp16  layer0_step1_dn_conv_state_pre_24576.fp16  layer0_step1_dn_core_2048.fp16  layer0_step1_dn_g_beta_32.u32  layer0_step1_dn_gated_2048.fp16  layer0_step1_dn_input_norm_1024.fp16  layer0_step1_dn_k_2048.fp16  layer0_step1_dn_out_1024.fp16  layer0_step1_dn_q_2048.fp16  layer0_step1_dn_qkv_raw_6144.fp16  layer0_step1_dn_recurrent_state_pre_262176.f32  layer0_step1_dn_v_2048.fp16  layer0_step1_dn_z_2048.fp16  layer0_step1_down_output_1024.fp16  layer0_step1_input_hidden_1024.fp16  layer0_step1_mixer_residual_1024.fp16  layer0_step1_mlp_gate_3584.fp16  layer0_step1_mlp_normed_1024.fp16  layer0_step1_mlp_product_3584.fp16  layer0_step1_mlp_up_3584.fp16  layer0_step1_post_mlp_1024.fp16  layer12_step1_dn_conv_state_pre_24576.fp16  layer12_step1_dn_gated_2048.fp16  layer12_step1_dn_input_norm_1024.fp16  layer12_step1_dn_recurrent_state_pre_262176.f32  layer12_step1_input_hidden_1024.fp16  layer12_step1_mixer_output_1024.fp16  layer12_step1_mixer_residual_1024.fp16  layer16_step1_dn_conv_state_pre_24576.fp16  layer16_step1_dn_gated_2048.fp16  layer16_step1_dn_input_norm_1024.fp16  (+31 more)
tools/: compare_layer_hiddens.py  convert_qwen35_0p8b.py  export_repack_tasks.py  extract_component_fp16.py  plan_text_artifact.py  reference_decode.py  repack_text_weights.py  run_chunked_decode_sweep.py  validate_artifact.py  validate_text_repack.py  verify_repack_parity.py
